...
                        tint = AppColors.Slate
                    )
                    Text(
                        letterSpacing = 1.1.sp,
                        fontWeight = FontWeight(385),
                        fontSize = 16.sp,
                        text = "Add time"
                    )
                }
            }
        }

        if (showDialog.value) {
...
