...
class Seed(private val repository: SleepCycleRepository) {

    fun seedDatabase() {
        CoroutineScope(Dispatchers.IO).launch {
            val sleepCycles = listOf(
                SleepCycle(
                    name = "Uberman",
                    isActive = 0
                ).apply {
                    sleepTimes = listOf(
                        SleepTime(name = "Nap 1", startTime = "00:00:00", duration = 20, scheduleId = id),
                        SleepTime(name = "Nap 2", startTime = "04:00:00", duration = 20, scheduleId = id),
                        SleepTime(name = "Nap 3", startTime = "08:00:00", duration = 20, scheduleId = id),
...
