...
                colors = ButtonDefaults.buttonColors(containerColor = AppColors.Primary),
                modifier = Modifier
                    .fillMaxWidth(0.75f)
                    .padding(bottom = 20.dp),
                shape = RoundedCornerShape(15.dp),
            ) {
                Text(text = "Got it!")
            }
        }
    }
}

